	PR rtl-optimization/45695 	* combine.c (try_combine): When splitting a two set pattern, 	make sure the pattern which will be put into i2 doesn't use REGs 	or MEMs set by insns in between i2 and i3.

* gcc.c-torture/execute/pr45695.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@164431 138bc75d-0d04-0410-961f-82ee72b054a4